# researcher

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  profiles.toml  requirements.txt
.codescout/: project.toml  system-prompt.md
.codescout/memories/: architecture.anchors.toml  architecture.md  conventions.md  development-commands.anchors.toml  development-commands.md  domain-glossary.anchors.toml  domain-glossary.md  gotchas.anchors.toml  gotchas.md  language-patterns.md  onboarding.md  project-overview.anchors.toml  project-overview.md
config/searxng/: settings.yml
docs/plans/: 2026-03-06-code-research-design.md  2026-03-06-code-research-impl.md  2026-03-06-job-search-design.md  2026-03-06-job-search-impl.md  2026-03-06-people-company-research-design.md  2026-03-06-people-company-research-impl.md  2026-03-06-rich-research-request-design.md  2026-03-06-rich-research-request.md  2026-03-09-ranking-improvements-design.md  2026-03-09-ranking-improvements.md
infra/: .env.example  docker-compose.yml
src/: config.rs  main.rs  mcp_server.rs  server.rs
src/embeddings/: client.rs  dedup.rs  mod.rs  reranker.rs
src/jobs/: fetcher.rs  mod.rs  publisher.rs  scorer.rs
src/llm/: client.rs  stream.rs
src/researcher/: crawler.rs  mod.rs  pipeline.rs  planner.rs  publisher.rs  quality.rs  summarizer.rs
src/scraper/: html.rs
src/search/: brave.rs  duckduckgo.rs  exa.rs  google.rs  mod.rs  searxng.rs  tavily.rs  vertex.rs
static/: index.html
tests/model/: test_cross_encoder.py
(+8 files in other folders)
